--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@rails/actioncable": "^8.0.200",
     "axios": "^1.10.0",
     "react": "^18.3.1",
