--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@mui/icons-material": "^7.1.1",
+    "@mui/material": "^7.1.1",
     "@rails/actioncable": "^8.0.200",
     "axios": "^1.10.0",
     "react": "^18.3.1",
