--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -58,3 +58,5 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem 'vite_rails'
 gem 'rack-cors'
 gem 'rack', '< 3.0'
+
+gem 'dotenv-rails', groups: [:development, :test, :production]
