--- a/backend/config/database.yml
+++ b/backend/config/database.yml
@@ -85,6 +85,14 @@ test:
 #
 production:
   <<: *default
-  database: backend_production
-  username: backend
-  password: <%= ENV['BACKEND_DATABASE_PASSWORD'] %>
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
+  timeout: 5000
+  host: <%= ENV["SUPABASE_DB_HOST"] %>
+  port: <%= ENV["SUPABASE_DB_PORT"] %>
+  username: <%= ENV["SUPABASE_DB_USER"] %>
+  password: <%= ENV["SUPABASE_DB_PASSWORD"] %>
+  database: <%= ENV["SUPABASE_DB_NAME"] %>
+  sslmode: require
+
