--- a/backend/config/database.yml
+++ b/backend/config/database.yml
@@ -85,14 +85,8 @@ test:
 #
 production:
   <<: *default
-  adapter: postgresql
-  encoding: unicode
+  url: <%= ENV['DATABASE_URL'] %>
   pool: 5
   timeout: 5000
-  host: <%= ENV["SUPABASE_DB_HOST"] %>
-  port: <%= ENV["SUPABASE_DB_PORT"] %>
-  username: <%= ENV["SUPABASE_DB_USER"] %>
-  password: <%= ENV["SUPABASE_DB_PASSWORD"] %>
-  database: <%= ENV["SUPABASE_DB_NAME"] %>
   sslmode: require
 
