--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.5",
+    "rollup-plugin-copy": "^3.5.0",
     "tailwindcss": "^4.1.10",
     "vite": "^4.5.14"
   },
